--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,18 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
+        body {/*
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;/*cobrir a tela inteira*/
+            background-size: cover; = cobrir a tela inteira
+            background-attachment: fixed; = fixar a imagem mesmo descendo com o scroll
+            */
+
+            /*Shorthand - background
+            color > image > position > repeat > [size] > attachment
+
+            OBS: o size ainda não funciona na shorthand
+            em navegadores
+            */
+
+            background:  black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +41,12 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus reprehenderit non nisi voluptates voluptate omnis! Ullam magnam praesentium non voluptatibus et deleniti optio, quae ad quidem. Pariatur, tempora aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed a aliquid aut dicta explicabo facilis officiis culpa quos voluptates temporibus qui soluta dolorum voluptatibus, perferendis, perspiciatis dignissimos maiores. Architecto, sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil hic, exercitationem voluptatibus illo accusantium reprehenderit molestiae eos sunt numquam sequi repellendus accusamus iusto voluptatem iste optio quis officiis facere corrupti?
         </p>
     </main>
