--- a/exercicios/desafios/d014/index.html
+++ b/exercicios/desafios/d014/index.html
@@ -41,10 +41,10 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2" scope="rowgroup">Área</th>
-                <th rowspan="2" scope="rowgroup">Disciplinas</th>
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col">Disciplinas</th>
                 <th colspan="2" scope="colgroup">Notas</th>
-                <th rowspan="2" scope="rowgroup">Média</th>
+                <th rowspan="2" scope="col">Média</th>
             </tr>
 
             <tr>
