imagen do cursoemvideo

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -33,7 +33,7 @@
         Colocando name="frame", você pode colocar no target em links em vez de _blank
         Em vez do src, pode se usar o srcdoc = colocando titulos, paragrafos ou ate imagens(tag img)
     -->
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores quia necessitatibus illo exercitationem! Non vero porro odit minus laboriosam? Culpa fugit id consequuntur vel quisquam. Beatae velit inventore sapiente!</p>" frameborder="0">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores quia necessitatibus illo exercitationem! Non vero porro odit minus laboriosam? Culpa fugit id consequuntur vel quisquam. Beatae velit inventore sapiente!</p><img src='imagens/cursoemvideo.png'></iframe> " frameborder="0">
         <p>Infelizmente seu navegador  não é compatível com isso.</p>
     </iframe>
 
